2010-08-13  JMB  Calculator backspace/clear fix, better Fremantle integer input

    Fixed a bug where clicking backspace or the clear button in the calculator
    dialog could result in incorrect display of grouping separators.  Enabled
    function lock on integer entry widgets in Fremantle, so input is easier
    using the hardware keyboard (although this precludes group separators, and
    wouldn't work for decimal values either).

2010-06-08  JMB  XML import bugfix, default decimal string fix

    Fixed a bug where XML files would fail to import if the current filter
    was specified as anything other than the "all rows" filter.  Fixed the
    initial default value for decimal columns to use the appropriate decimal
    point character for the locale in use.

2010-06-03  JMB  Packaging fix for Fremantle

    Fixed a problem with the packaging for Fremantle that was causing
    installation to fail near completion (the link to the binary wasn't always
    managed properly).

2010-06-02  #################### PortaBase 2.0 ####################

2010-06-02  JMB  Fremantle condition editor fix, updated version number

    Fixed a bug on Fremantle where launching the date picker dialog from the
    condition editor would confuse the back/close button logic in the app
    thereafter.  Updated version numbers for the next release.

2010-05-29  JMB  Recent files update fix

    Fixed a bug where an invalid entry was added to the recently opened files
    list when importing a MobileDB or XML file.

2010-05-27  #################### PortaBase 2.0rc1 ####################

2010-05-27  JMB  Japanese update, accelerator clash fix, dropped file fix

    Updated the Japanese translation of the help file (fixing a few minor
    issues with the UI translation and the English help file in the process).
    Both "Preferences" and "Edit Enums" in the File menu were using the "E"
    accelerator, switched the latter to use "N".  Also accounted for the